--- a/DiscordBot.csproj
+++ b/DiscordBot.csproj
@@ -9,6 +9,21 @@
     <PackageReference Include="System.Diagnostics.Process">
     <Version>4.3.0</Version>
 </PackageReference>
+    	  <PackageReference Include="DSharpPlus">
+		  <Version>4.4.0</Version>
+	  </PackageReference>
+    	  <PackageReference Include="DSharpPlus.CommandsNext">
+		  <Version>4.4.0</Version>
+	  </PackageReference>
+    	  <PackageReference Include="DSharpPlus.Interactivity">
+		  <Version>4.4.0</Version>
+	  </PackageReference>
+    	  <PackageReference Include="DSharpPlus.SlashCommands">
+		  <Version>4.4.0</Version>
+	  </PackageReference>
+    	  <PackageReference Include="DSharpPlus.VoiceNext">
+		  <Version>4.4.0</Version>
+	  </PackageReference>
   </ItemGroup>
 
 </Project>
