--- a/DiscordBot.csproj
+++ b/DiscordBot.csproj
@@ -1,29 +1,30 @@
-<Project Sdk="Microsoft.NET.Sdk.Web" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-
+<?xml version="1.0" encoding="utf-8"?>
+<Project Sdk="Microsoft.NET.Sdk.Web" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="14.0">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
+    <UpgradeBackupLocation>
+    </UpgradeBackupLocation>
+    <OldToolsVersion>2.0</OldToolsVersion>
   </PropertyGroup>
-<Target Name="Build" DependsOnTargets="$(BuildDependsOn)" Outputs="$(TargetPath)"/>
   <ItemGroup>
     <PackageReference Include="System.Diagnostics.Process">
-    <Version>4.3.0</Version>
-</PackageReference>
-    	  <PackageReference Include="DSharpPlus">
-		  <Version>4.4.0</Version>
-	  </PackageReference>
-    	  <PackageReference Include="DSharpPlus.CommandsNext">
-		  <Version>4.4.0</Version>
-	  </PackageReference>
-    	  <PackageReference Include="DSharpPlus.Interactivity">
-		  <Version>4.4.0</Version>
-	  </PackageReference>
-    	  <PackageReference Include="DSharpPlus.SlashCommands">
-		  <Version>4.4.0</Version>
-	  </PackageReference>
-    	  <PackageReference Include="DSharpPlus.VoiceNext">
-		  <Version>4.4.0</Version>
-	  </PackageReference>
+      <Version>4.3.0</Version>
+    </PackageReference>
+    <PackageReference Include="DSharpPlus">
+      <Version>4.4.0</Version>
+    </PackageReference>
+    <PackageReference Include="DSharpPlus.CommandsNext">
+      <Version>4.4.0</Version>
+    </PackageReference>
+    <PackageReference Include="DSharpPlus.Interactivity">
+      <Version>4.4.0</Version>
+    </PackageReference>
+    <PackageReference Include="DSharpPlus.SlashCommands">
+      <Version>4.4.0</Version>
+    </PackageReference>
+    <PackageReference Include="DSharpPlus.VoiceNext">
+      <Version>4.4.0</Version>
+    </PackageReference>
   </ItemGroup>
-
 </Project>
